# vue-conversations

./: .gitignore  README.md  app.js  requirements.txt
conversations-app/: index.html
conversations-dagster/: README.md  requirements.txt  setup.py  workspace.yaml
conversations-dagster/conversations_dagster/: __init__.py  repository.py
conversations-dagster/conversations_dagster/graphs/: say_hello.py  scraping.py
conversations-dagster/conversations_dagster/ops/: fetch_data.py
conversations-dagster/conversations_dagster/schedules/: hourly_schedule.py  my_hourly_schedule.py
conversations-dagster/conversations_dagster/sensors/: my_sensor.py  sensor.py
conversations-dagster/conversations_dagster_tests/test_graphs/: test_say_hello.py  test_scraping.py
conversations-dagster/conversations_dagster_tests/test_ops/: test_fetch_data.py  test_hello.py
conversations-fetcher/: README.md
conversations-fetcher/src/conversations_fetcher/: settings.py
conversations-fetcher/src/conversations_fetcher/news/: googlenews_scrape.py
conversations_fetcher/: LICENSE  setup.cfg
conversations_fetcher/src/conversations_fetcher/news/: ingest.py
conversations_fetcher/src/conversations_fetcher/news/googlenews_scrape/: crawl_sources.py
conversations_fetcher/src/conversations_fetcher/news/googlenews_scrape/googlenews_scrape/: pipelines.py  settings.py
conversations_fetcher/src/conversations_fetcher/news/googlenews_scrape/googlenews_scrape/spiders/: googlenews_spider.py
data/news/: googlenews_scrape.py
data/news/googlenews_scrape/googlenews_scrape/: items.py  middlewares.py  (+3 more)
(+8 files in other folders)
