[metadata]
name = conversations-fetcher
version = 0.0.1
author = Wes Warriner
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blsmxiu47/conversations-fetcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src